[gd_scene load_steps=5 format=3 uid="uid://c6r83f2fxetmd"]

[ext_resource type="Texture2D" uid="uid://b3ad277t2vnsi" path="res://assets/ui/misc/item_pickup_preview_bg.png" id="1_6ihfj"]
[ext_resource type="Script" path="res://scenes/ui/item_pickup/item_pickup_preview.gd" id="1_wxx2j"]
[ext_resource type="Theme" uid="uid://wb56k7anlde3" path="res://resources/themes/font_main_theme.tres" id="2_rleu8"]
[ext_resource type="Texture2D" uid="uid://1pn3mgkm7kf0" path="res://assets/ui/item_icons/item_icon_axe.png" id="3_gou0k"]

[node name="ItemPickupPreview" type="TextureRect"]
offset_left = 11.0
offset_right = 55.0
offset_bottom = 12.0
texture = ExtResource("1_6ihfj")
stretch_mode = 2
script = ExtResource("1_wxx2j")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_vertical = 2

[node name="ItemIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_gou0k")
stretch_mode = 2

[node name="DisplayName" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_rleu8")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Axt"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
